Modularization of ControlsFX